# mcp-refana

./: GUIDE.md  README.md  demo-refana.ipynb  pyproject.toml  run_server.sh  test_dataset_discovery.py  test_server.py  workflow_example.py
src/mcp_refana/: __init__.py  server.py
src/mcp_refana/mcp_tools/: __init__.py  refana_wrappers.py
