[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mcp-refana"
version = "0.1.0"
description = "MCP server for Mu2e refana analysis"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "mcp[cli]>=1.27,<2",
  "numpy>=1.26,<3",
  "scipy>=1.12,<2",
  "scikit-learn>=1.3,<2",
  "xgboost>=2.0,<3",
  "uproot>=4.0,<5",
  "awkward>=2.0,<3",
  "matplotlib>=3.8,<4",
]

[project.scripts]
mcp-refana-server = "mcp_refana.server:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<0.12",
]
notebook = [
  "ipykernel>=6.29,<7",
  "jupyter>=1.0,<2",
  "jupyterlab>=4.0,<5",
]
